[package]
name = "system-pause"
version = "0.1.1"
edition = "2021"
description = "`system-pause` is a Rust library for stopping program execution temporarily. It offers simple macros for pausing the console, either waiting for user input or pausing with a countdown timer. This is useful for debugging or interactive console applications."
repository = "https://github.com/Drew-Chase/system-pause.git"
license-file = "LICENSE"
readme = "README.MD"


[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name="with_message"
path="examples/with_message.rs"

[[example]]
name="with_timer"
path = "examples/with_timer.rs"